--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .navbar-fixed{
-    @apply fixed z-[9999] bg-white bg-opacity-80;
+    @apply fixed z-[9999] bg-white dark:bg-black/55 bg-opacity-80;
     backdrop-filter: blur-5px;
     box-shadow: inset 0 -1px 0 0 rgb(0, 0, 0, 0.2);
     
@@ -19,4 +19,10 @@
 }
 .active > span:nth-child(3){
     @apply -rotate-45;
+}
+#dark-toggle:checked ~ label div.toggle-circle{
+    @apply translate-x-3 
+}
+#dark-toggle:checked ~ label div.background-toggle{
+    @apply bg-black
 }
